@@ -1,3 +1,9 @@
+2015-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* lacheck.l: Avoid segfault on "\end{a}$", i.e., do not
+	pop unmatched "beginning of file ...".
+	  Problem found by Antoine Amarilli <a3nm@a3nm.net>.
+
 2014-12-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* lacheck.l, lacheck.c: Do not include win32lib.h.
